# aieng-bootcamp-02-defaut

./: .gitignore  CLAUDE.md  Dockerfile.fastapi  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
evals/: eval_retriever.py
notebooks/: 01-llm-api-test.ipynb  02-amazon-data.ipynb  test.ipynb
notebooks/week_1/: 01-llm-api-test.ipynb  02-amazon-data.ipynb  explore-arxiv.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAG-Evals.ipynb
notebooks/week_3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_4/: 00-utility.ipynb  01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week_4/utils/: utils.py
notebooks/week_5/: 01-Agent-Multi-Turn.ipynb  01.1-Langgraph-Checkpointing.ipynb  05-MCP.ipynb
src/: cli.py
src/api/: app.py
src/api/agent/: __init__.py  graph.py  tools.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/chatbot_ui/: app.py
src/chatbot_ui/core/: config.py
