[project]
name = "aieng-bootcamp-defaut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "openai>=2.1.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
]
